<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MetaWatch Locker</string>	
    <string name="metawatch_admin">Metawatch</string>
    <string name="metawatch_admin_description">Force device locking when connection to Metawatch is lost</string>
    <string name="adminWarning">This application requires ADMIN mode and uses password based locking</string>
    <string name="password">Password</string>
    <string name="repeat">Repeat Password</string>
    <string name="goon">Set password</string>
    <string name="setpassword">Change password</string>
    <string name="enableButtonText">Enable</string>
    <string name="onoff">Locking/unlocking device</string>
    <string name="immediateLock">Immediate lock</string>
    <string name="immediateLockHelp">"What's this?"</string>
    <string name="immediateLockLongHelp">If checked the phone will locked (i.e. screen switched off) immediatelly when connection has lost. If uncheked only password will be set.</string>
</resources>
