<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">
	<TextView android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView1"
		android:layout_width="wrap_content" android:text="@string/password"></TextView>
	<EditText android:layout_height="wrap_content"
		android:layout_width="match_parent" android:inputType="textPassword"
		android:id="@+id/password">
		<requestFocus></requestFocus>
	</EditText>

	<TextView android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/textView2"
		android:layout_width="wrap_content" android:text="@string/repeat"></TextView>
	<EditText android:layout_height="wrap_content"
		android:layout_width="match_parent" android:inputType="textPassword"
		android:id="@+id/repeatPassword"></EditText>
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/linearLayout1">
		<Button android:layout_height="wrap_content" android:text="@string/goon" android:layout_width="match_parent" android:id="@+id/setPassword"></Button>
	</LinearLayout>
</LinearLayout>
